# python-module-template

./: .pre-commit-config.yaml   README.md  pyproject.toml  setup.cfg  setup.py
